# ecommerce_analysis

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
documentation/: documentation.md  todo.md
src/: dbt_init.py  eda_util.py  exception.py  logger.py  query_execution.py  util.py
