[project]
name = "sql_project"
version = "0.1.0"
description = "Projeto dedicado para prática e análises com SQL."
authors = [
    {name = "João",email = "joao@email.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
"dbt-postgres (>=1.9.0,<2.0.0)",
"sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.10.0"